finished till the slider in details page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -18,6 +18,8 @@
     "CommercialCommunication":"التواصل التجارى",
     "branches":"الفروع",
     "productsCatalog":"كتالوج المنتجات",
+    "companyAddress":"العنوان",
+    "communicationLinks":"مواقع التواصل",
     "copyRights":"© جميع الحقوق محفوظة 2019",
 
     "factory":{
