--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,8 @@
     "CommercialCommunication":"Commercial Communication",
     "branches":"Branches",
     "productsCatalog":"Products Catalog",
+    "companyAddress":"Address",
+    "communicationLinks":"Social Media",
     "copyRights":"© All Copy Right 2019",
 
     "factory":{
