search factories& res bug card

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -104,8 +104,10 @@
         "jobNameArIsTooShort":"المسمى الوظيفى يجب ان يكون اكثر من 3 احرف",
         "jobNameIsRequired":"المسمى الوظيفى باللغه الانجليزيه مطلوب",
         "jobNameIsTooShort":"المسمى الوظيفى باللغه الانجليزيه يجب ان يكون اكثر من 3 احرف"
-    }
+    },
 
-
-
+    "searchArea":{
+        "searchTxtRequired":"اسم الشركة / المصنع مطلوب"
+    }   
+    
 }
