--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,8 @@
     "companyAddress":"Address",
     "communicationLinks":"Social Media",
     "copyRights":"© All Copy Right 2019",
+    "noRes":"No Results Found",
+    
 
     "factory":{
         "nameHeader":" Factory / Company  Name",
