adding city and fix ui bugs

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -5,7 +5,7 @@
     "sponsors":"الرعاه المشاركون",
     "AddFactory":"اضف مصنعك",
     "ContactUs":"اتصل بنا",
-    "lang":"english",
+    "lang":"English",
     "search":"ابحث",
     "IndustrialSectors":"القطاعات الصناعية",
     "About":"عن البوابه",
