handling tabs logo & txt

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
     "homePage":"Home",
     "aboutPortal":"About us",
-    "IndustrialDepartments":"Industrial departments",
+    "IndustrialDepartments":"Industrial sectors",
     "sponsors":"Sponsors",
     "AddFactory":"Add your Factory",
     "ContactUs":"Contact Us",
